--- a/candle-wasm-examples/moshi_asr/index.html
+++ b/candle-wasm-examples/moshi_asr/index.html
@@ -3,28 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Welcome to Candle!</title>
-    <link data-trunk rel="copy-file" href="mel_filters.safetensors" />
-    <!-- samples -->
-    <link data-trunk rel="copy-dir" href="audios" />
-    <!-- tiny.en -->
-    <link data-trunk rel="copy-dir" href="whisper-tiny.en" />
-    <!-- tiny -->
-    <link data-trunk rel="copy-dir" href="whisper-tiny" />
-    <!-- quantized -->
-    <link data-trunk rel="copy-dir" href="quantized" />
-
-    <link
-      data-trunk
-      rel="rust"
-      href="Cargo.toml"
-      data-bin="app"
-      data-type="main" />
-    <link
-      data-trunk
-      rel="rust"
-      href="Cargo.toml"
-      data-bin="worker"
-      data-type="worker" />
+    <script type="module" src="main.js"></script>
 
     <link
       rel="stylesheet"
