script to convert tokenizer to HF json format

--- a/candle-wasm-examples/moshi_asr/index.html
+++ b/candle-wasm-examples/moshi_asr/index.html
@@ -27,11 +27,10 @@
       // models base url
       const MODELS = {
           moshi_1b_en_fr: {
-            base_url: "https://huggingface.co/kyutai/stt-1b-en_fr/resolve/main/",
-            model: "model.safetensors",
-            mimi: "mimi-pytorch-e351c8d8@125.safetensors",
-            tokenizer: "tokenizer_en_fr_audio_8000.model",
-            config: "config.json",
+            model: "https://huggingface.co/kyutai/stt-1b-en_fr/resolve/main/model.safetensors",
+            mimi: "https://huggingface.co/kyutai/stt-1b-en_fr/resolve/main/mimi-pytorch-e351c8d8@125.safetensors",
+            tokenizer: "/prepare/tokenizer_en_fr_audio_8000.json",
+            config: "https://huggingface.co/kyutai/stt-1b-en_fr/resolve/main/config.json",
             size: "2.3 GB",
           },
         };
@@ -145,10 +144,10 @@
         }
         const modelID = modelEl.value;
         const model = MODELS[modelID];
-        const modelURL = model.base_url + model.model;
-        const mimiURL = model.base_url + model.mimi;
-        const tokenizerURL = model.base_url + model.tokenizer;
-        const configURL = model.base_url + model.config;
+        const modelURL = model.model;
+        const mimiURL = model.mimi;
+        const tokenizerURL = model.tokenizer;
+        const configURL = model.config;
 
         transcribeAudio(
           modelURL,
