--- a/candle-wasm-examples/moshi_asr/index.html
+++ b/candle-wasm-examples/moshi_asr/index.html
@@ -26,12 +26,12 @@
 
       // models base url
       const MODELS = {
-          moshi_1b_en_fr: {
-            model: "https://huggingface.co/kyutai/stt-1b-en_fr/resolve/main/model.safetensors",
-            mimi: "https://huggingface.co/kyutai/stt-1b-en_fr/resolve/main/mimi-pytorch-e351c8d8@125.safetensors",
+          moshi_1b_en_fr_q4k: {
+            model: "https://huggingface.co/efficient-nlp/stt-1b-en_fr-quantized/resolve/main/model-q4k.gguf",
+            mimi: "https://huggingface.co/efficient-nlp/stt-1b-en_fr-quantized/resolve/main/mimi-pytorch-e351c8d8@125.safetensors",
             tokenizer: "/prepare/tokenizer_en_fr_audio_8000.json",
-            config: "https://huggingface.co/kyutai/stt-1b-en_fr/resolve/main/config.json",
-            size: "2.3 GB",
+            config: "https://huggingface.co/efficient-nlp/stt-1b-en_fr-quantized/resolve/main/config.json",
+            size: "942 MB",
           },
         };
 
