--- a/candle-wasm-examples/moshi_asr/index.html
+++ b/candle-wasm-examples/moshi_asr/index.html
@@ -20,9 +20,7 @@
     </style>
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="module">
-      // base url for audio examples
-      const AUDIO_BASE_URL =
-        "https://huggingface.co/datasets/Narsil/candle-examples/resolve/main/";
+      const AUDIO_BASE_URL = "/audios/";
 
       // models base url
       const MODELS = {
@@ -32,6 +30,13 @@
             tokenizer: "/prepare/tokenizer_en_fr_audio_8000.json",
             config: "https://huggingface.co/efficient-nlp/stt-1b-en_fr-quantized/resolve/main/config.json",
             size: "942 MB",
+          },
+          moshi_1b_en_fr_q80: {
+            model: "https://huggingface.co/efficient-nlp/stt-1b-en_fr-quantized/resolve/main/model-q80.gguf",
+            mimi: "https://huggingface.co/efficient-nlp/stt-1b-en_fr-quantized/resolve/main/mimi-pytorch-e351c8d8@125.safetensors",
+            tokenizer: "/prepare/tokenizer_en_fr_audio_8000.json",
+            config: "https://huggingface.co/efficient-nlp/stt-1b-en_fr-quantized/resolve/main/config.json",
+            size: "1.4 GB",
           },
         };
 
@@ -267,34 +272,10 @@
             <span class="text-xs block"> (352 kB)</span>
           </button>
           <button
-            data-value="samples_a13.wav"
+            data-value="samples_chessvideo.wav"
             class="text-gray-500 border border-gray-500 rounded-md p-2 underline hover:no-underline">
-            <span>a13.wav</span>
-            <span class="text-xs block"> (960 kB)</span>
-          </button>
-          <button
-            data-value="samples_mm0.wav"
-            class="text-gray-500 border border-gray-500 rounded-md p-2 underline hover:no-underline">
-            <span>mm0.wav</span>
-            <span class="text-xs block new"> (957 kB)</span>
-          </button>
-          <button
-            data-value="samples_gb0.wav"
-            class="text-gray-500 border border-gray-500 rounded-md p-2 underline hover:no-underline">
-            <span>gb0.wav </span>
-            <span class="text-xs block">(4.08 MB)</span>
-          </button>
-          <button
-            data-value="samples_gb1.wav"
-            class="text-gray-500 border border-gray-500 rounded-md p-2 underline hover:no-underline">
-            <span>gb1.wav </span>
-            <span class="text-xs block">(6.36 MB)</span>
-          </button>
-          <button
-            data-value="samples_hp0.wav"
-            class="text-gray-500 border border-gray-500 rounded-md p-2 underline hover:no-underline">
-            <span>hp0.wav </span>
-            <span class="text-xs block">(8.75 MB)</span>
+            <span>chessvideo.wav</span>
+            <span class="text-xs block"> (3.7 MB)</span>
           </button>
         </div>
       </div>
